2000-07-15 20:00 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *include/hbexpra.c
    *include/hbexprb.c
    *include/hbexprc.c
    *include/hbexprop.h
    *source/common/expropt1.c
    *source/common/expropt2.c
    *source/compiler/harbour.l
    *source/macro/macroa.c
    *source/macro/macrob.c
    *source/macro/macroc.c
        * literal strings are now stored in the hash table together with
        identifiers (only the main compiler not the macro compiler)
        * expression of string type (created by the exression optimier)
        stores info it is allowed to deallocate the memory occupied by
        the string (normally it stores pointer to memory allocated
        in the identifies table - however after optimization it can store 
        string allocated outside
        
    *source/compiler/hbident.c
        * the hash table is increased to 373 items      

2000-07-14 22:40 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/harbour.slx
     ! Removed Todo: Hex Numbers. There are no more known TODOs.

2000-07-15 01:20 UTC+0200 JfL <jfl@mafact.com> & RaC <Rac@mafact.com>
   * source/vm/classes.c
     * ! minor correction to allow the case where we would be in need of
       hb_clsdictrealloc during inheritance (no more empty bucket).

2000-07-14 20:25 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *source/vm/garbage.c
        * the garbage collector scans now hb_stack.Return values

2000-07-14 09:40 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/simplex.c
     ! Minor correction, to accept a match, if all rule's tokens used.

2000-07-13 19:00 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/harbour.slx
     ! Removed excess characters at end of #undef directives.

2000-07-13 23:24 UTC+0200 JfL <jfl@mafact.com> & RaC <Rac@mafact.com>
   * source/rtl/tClass.prg
     * Prepared for InitClass (Not working )
   * source/rtl/tObject.prg
     * Now Default :New and :Init method 'a la Class(y)'