@@ -48,17 +48,11 @@ HB_FUNC( BIN2U )
    {
       char * pszString = hb_itemGetCPtr( pItem );
       ULONG ulLen = hb_itemGetCLen( pItem );
-      BYTE byBuffer[ 4 ];
 
-      byBuffer[ 0 ] = ( ulLen >= 1 ) ? ( BYTE ) pszString[ 0 ] : 0;
-      byBuffer[ 1 ] = ( ulLen >= 2 ) ? ( BYTE ) pszString[ 1 ] : 0;
-      byBuffer[ 2 ] = ( ulLen >= 3 ) ? ( BYTE ) pszString[ 2 ] : 0;
-      byBuffer[ 3 ] = ( ulLen >= 4 ) ? ( BYTE ) pszString[ 3 ] : 0;
-
-      hb_retnl( HB_MKULONG( byBuffer[ 0 ],
-                            byBuffer[ 1 ],
-                            byBuffer[ 2 ],
-                            byBuffer[ 3 ] ) );
+      hb_retnl( HB_MKULONG( ( ulLen >= 1 ) ? ( BYTE ) pszString[ 0 ] : 0,
+                            ( ulLen >= 2 ) ? ( BYTE ) pszString[ 1 ] : 0,
+                            ( ulLen >= 3 ) ? ( BYTE ) pszString[ 2 ] : 0,
+                            ( ulLen >= 4 ) ? ( BYTE ) pszString[ 3 ] : 0 ) );
    }
    else
       hb_retnl( 0 );
